--- a/index.html
+++ b/index.html
@@ -13,19 +13,52 @@
             <h2 class="mainTitle">PAYPAL INTEGRATION</h2>
         </header>
         <section>
-            <p class="amountData">Amount: Ksh </p><p id="value" class="amountData">500</p>
-            <div id="paypalBtns">
+            <div class="paypalbtns-container">
+                <p class="amountData">Amount: Ksh </p><p id="value" class="amountData">500</p>
+                <div id="paypalBtns">
 
+                </div>
+            </div>
+            
+            <div id="payment-modal" class="modal">
+                <div class="modal-content">
+                    <span id="close">Ok</span>
+                    <p id="message"></p>
+                </div>
+                
             </div>
         </section>
     </div>
 
     <script src="https://www.paypal.com/sdk/js?client-id=ARtR3-OMfM_6OajAtKiyvFuz0VGwD3KTLtPcnRbuUhiHGTpIZho0N03IGM4vyci51zCDN8HllK-rbKoG"></script>
     <script>
+        // Get the modal
+        var modal = document.getElementById("payment-modal");
+
+        // Get the button that opens the modal
+        //var btn = document.getElementById("myBtn");
+
+        // Get the <span> element that closes the modal
+        var close = document.getElementById("close");
+
+        // When the user clicks on the button, open the modal
         /*
-        let value = document.getElementById('value').textContent;
-        console.log(value);
+        btn.onclick = function() {
+        modal.style.display = "block";
+        }
         */
+
+        // When the user clicks on <span> (x), close the modal
+        close.onclick = function() {
+        modal.style.display = "none";
+        }
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function(event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+        }
     paypal.Buttons({
         //set up transaction
         createOrder: function(data, actions) {
@@ -40,12 +73,16 @@
         // capture funds from transaction
         onApprove: function(data, actions) {
             return actions.order.capture().then(function(details) {
-                alert('Transaction completed by: ' + details.payer.name.given_name);
+                modal.style.display = "block";
+                message.innerText = 'Transaction completed by: ' + details.payer.name.given_name;
+                // alert('Transaction completed by: ' + details.payer.name.given_name);
             });
         },
         // actions to perform when transaction is cancelled
         onCancel: function(data) {
-            alert('Transaction cancelled');
+            modal.style.display = "block";
+            message.innerText = 'Transaction cancelled';
+            //alert('Transaction cancelled');
         }
     }).render('#paypalBtns');
     </script>
